[package]
name = "launch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git" }
freedesktop-desktop-entry = { git = "https://github.com/jakeisnt/freedesktop-desktop-entry.git" }
fuzzy-matcher = "0.3.7"
