[package]
name = "launch"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "^0.21.3"
freedesktop-desktop-entry = { git = "https://github.com/jakeisnt/freedesktop-desktop-entry.git" }
fuzzy-matcher = "0.3.7"
